[package]
name = "reminder_rs"
version = "1.6.6"
authors = ["jellywx <judesouthworth@pm.me>"]
edition = "2018"

[dependencies]
poise = "0.3"
dotenv = "0.15"
tokio = { version = "1", features = ["process", "full"] }
reqwest = "0.11"
lazy-regex = "2.3.0"
regex = "1.6"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
chrono-tz = { version = "0.6", features = ["serde"] }
lazy_static = "1.4"
num-integer = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
rmp-serde = "1.1"
rand = "0.8"
levenshtein = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "macros", "mysql", "bigdecimal", "chrono"]}
base64 = "0.13"

[dependencies.postman]
path = "postman"

[dependencies.reminder_web]
path = "web"
