[package]
name = "postman"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["process", "full"] }
regex = "1.4"
log = "0.4"
env_logger = "0.8"
chrono = "0.4"
chrono-tz = { version = "0.5", features = ["serde"] }
lazy_static = "1.4"
num-integer = "0.1"
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "macros", "mysql", "bigdecimal", "chrono"]}

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "collector",
    "unstable_discord_api"
]
